--- a/templates/busqueda.html
+++ b/templates/busqueda.html
@@ -1,1 +1,14 @@
-<!DOC
+<!DOCTYPE html>
+<html lang="es">
+    <head> 
+        <meta charset="UTF-8">
+        <title>buscar</title>
+    </head>
+    <body>
+        <h1>Biblioteca</h1>
+        <p>Titulo: {{titulo}}</p>
+        <p>Autor: {{autor</p>
+                <a href="/">Inicia</a>
+    </body>
+
+</html>
