he creado requirements.txt

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -8,8 +8,9 @@
         <h1>Jose Antonio Canalo Gonzalez</h1>
         <h2>Páginas</h2>
         <h3>Calculadora de potencias</h3>
-        <p>Escribe en la URL  "-/potencia/[base]/[exponente]"</p>
-        <a href=""/cuenta/interactivo/i">Contar las "i" que hay en "interactivo"</a>"
+        <p>Escribe en la URL  "/potencia/[base]/[exponente]"</p>
+        <a href="/potencia/2/3">Ejemplo de potencia</a><br>
+        <a href="/cuenta/interactivo/i">Contar las "i" que hay en "interactivo"</a>"
         <h3>buscar un codigo</h3>
         <p>Escribe en la URL "/libro/[código]"</p>
             <a href="/libro/126">busca nombre del libro y autos del codigo 126</a>
