--- a/templates/busqueda.html
+++ b/templates/busqueda.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Biblioteca</h1>
         <p>Titulo: {{titulo}}</p>
-        <p>Autor: {{autor</p>
+        <p>Autor: {{autor}}</p>
                 <a href="/">Inicia</a>
     </body>
 
